--- a/src/componentes/Carrusel/carrusel.css
+++ b/src/componentes/Carrusel/carrusel.css
@@ -1,11 +1,17 @@
 
-/* .divCarrusel{
+.divCarrusel{
  width: 20%;
   
-} */
-/* .imgCarrusel{
-border: solid 2px blue;
+} 
+.imgCarrusel{
+border: solid 4px blue;
 height: 20%;
 width: 1250px;
 } 
- */
+.imagen{
+  width: 500px;
+  height: 500px;
+}
+
+
+
