--- a/src/componentes/body/card.css
+++ b/src/componentes/body/card.css
@@ -1,20 +1,20 @@
 .divCards{
-    box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+    box-shadow: rgba(128, 128, 128, 0.4) -5px 5px, rgba(128, 128, 128, 0.3) -10px 10px, rgba(128, 128, 128, 0.2) -15px 15px, rgba(128, 128, 128, 0.1) -20px 20px, rgba(0, 0, 0, 0.05) -25px 25px;
     display: flex;
     margin: 2%;
     padding: 2%;
     flex-flow: row wrap;    
 }
 .card2{
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     border-radius: 5px;
     padding: 1%;
     height: max-content;
     margin: 5px;
     width: 19%;
+    transition: transform 0.5s;
 }
 .card2:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 img{
     border-radius: 9px;
@@ -33,3 +33,23 @@ img{
     margin-left: 50%;
     transform: translateX(-50%);
 }
+.button {
+    background-color: black; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border-radius: 8px;
+  }
+  
+  .button:hover {
+    background-color: gray; /* Green */
+  }
+  
